--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ This repository provides an Etherpad Container to be run on Red Hat OpenShift. W
 
 [source,bash]
 ----
-oc new-project gpte-etherpad --display-name "OpenTLC Shared Etherpad"
+oc new-project etherpad
 
 oc new-app --template=postgresql-persistent --param POSTGRESQL_USER=ether --param POSTGRESQL_PASSWORD=ether --param POSTGRESQL_DATABASE=etherpad --param POSTGRESQL_VERSION=10 --param VOLUME_CAPACITY=10Gi --labels=app=etherpad_db
 
